# app/Http/Controllers/CarController.php
@@ -9,7 +9,6 @@ use App\Http\Resources\CarResource;
 use App\Models\Car;
 use App\Services\CarService;
 use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Auth;
 
 class CarController
 {
@@ -55,7 +54,7 @@ class CarController
      *     path="/cars/{id}",
      *     operationId="CarsGet",
      *     tags={"Cars"},
-     *     summary="Get example by ID",
+     *     summary="Get car by ID",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
@@ -80,37 +79,65 @@ class CarController
     /**
      * @OA\Post(
      *     path="/cars",
-     *     operationId="carsCreateOrUpdate",
+     *     operationId="carCreate",
      *     tags={"Cars"},
-     *     summary="CreateOrUpdate by User",
+     *     summary="Create yet another Car record",
      *     @OA\Response(
      *         response="200",
      *         description="Everything is fine",
      *     ),
      * )
      */
-    public function createOrUpdate(CarRequest $request)
+    public function store(CarRequest $request)
     {
-        $car = app(CarService::class, ['user' => Auth::user()])->createOrUpdate(CarDto::fromRequest($request));
+        $car = app(CarService::class)->create(CarDto::fromRequest($request));
+
+        return new CarResource($car);
+    }
+    /**
+     * @OA\Patch(
+     *     path="/cars/{id}",
+     *     operationId="carUpdate",
+     *     tags={"Cars"},
+     *     summary="Update car by ID",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *     ),
+     * )
+     */
+    public function update(Car $car, CarRequest $request)
+    {
+        $car = app(CarService::class, ['car' => $car])->update(CarDto::fromRequest($request));
 
         return new CarResource($car);
     }
 
     /**
      * @OA\Delete(
-     *     path="/cars",
-     *     operationId="CarsDelete",
+     *     path="/cars/{id}",
+     *     operationId="CarDelete",
      *     tags={"Cars"},
-     *     summary="Delete example by User",
+     *     summary="Delete car by Id",
+     *      @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of example",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
      *     @OA\Response(
      *         response="204",
      *         description="Deleted",
      *     ),
      * )
      */
-    public function destroy()
+    public function destroy(Car $car)
     {
-        app(CarService::class, ['user' => Auth::user()])->delete();
+        app(CarService::class, ['car' => $car])->delete();
 
         return response()->noContent();
     }
